--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@ body {
   padding: 0;
 }
 main {
-  max-width: 700px;
+  max-width: 80%;
   margin: 2rem auto;
   padding: 2rem;
   background: #fff;
